--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,23 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width=".25*" />
+            <ColumnDefinition Width=".75*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height=".25*" />
+            <RowDefinition Height=".75*" />
+        </Grid.RowDefinitions>
+
+        <DockPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Background="LightGray">
+            <Button DockPanel.Dock="Top" Width="160" Height="30" Margin="5" Content="Betöltés" Click="BtnLoad_Click" />
+            <Button DockPanel.Dock="Top" Width="160" Height="30" Margin="5" Content="Kiértékelés" Click="BtnGrade_Click" />
+            <Button DockPanel.Dock="Bottom" Width="160" Height="30" Margin="5" Content="Mentés" Click="BtnQuit_Click" />
+
+        </DockPanel>
+        
 
     </Grid>
 </Window>
