fixálva lett és mostmár lefut

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,7 +20,7 @@
         <DockPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Background="LightGray">
             <Button DockPanel.Dock="Top" Width="160" Height="30" Margin="5" Content="Betöltés" Click="BtnLoad_Click" />
             <Button DockPanel.Dock="Top" Width="160" Height="30" Margin="5" Content="Kiértékelés" Click="BtnGrade_Click" />
-            <Button DockPanel.Dock="Bottom" Width="160" Height="30" Margin="5" Content="Mentés" Click="BtnQuit_Click" />
+            <Button DockPanel.Dock="Bottom" Width="160" Height="30" Margin="5" Content="Kilépés" Click="BtnQuit_Click" />
             <TextBlock Text="Eredmény" Background="Beige" x:Name="tbkResults" />
         </DockPanel>
         
