--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,7 +31,7 @@
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.Row="0" Width="Auto" Height="Auto">
-            <Label x:Name="tbkQuestion" Content="Kérdés" />
+            <Label x:Name="tbkQuestion" Content="Kérdés" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </StackPanel>
 
         <StackPanel Width="Auto" Height="50" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
